# highscore-api

./: .env.example  Cargo.toml  README.md
src/: app_data.rs  config.rs  error.rs  main.rs
src/handlers/: game.rs  highscore.rs  mod.rs  utils.rs
src/scripts/: create_gamedev.rs  mod.rs  refresh_api_key.rs
src/storage/: game.rs  gamedev.rs  highscore.rs  mod.rs  storage.rs
