[package]
name = "highscore-api"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
dotenv = "0.15.0"
env_logger = "0.10.0"
envy = "0.4"
log = "0.4.20"
mongodb = "2.7.1"
serde = { version = "1.0", features = ["derive"] }
uuid = "1.5.0"
futures = "0.3.29"
